working on getting less/css to work

--- a/less/bio-section.less
+++ b/less/bio-section.less
@@ -1,1 +1,8 @@
 // main: main.less
+body {
+  background-color: white;
+  background-width: 20%;
+  background-position: center 100px;
+  background-attachment: fixed;
+  background-repeat: repeat-x;
+}
