updated targeting to only apply to #bios-page

--- a/less/bio-section.less
+++ b/less/bio-section.less
@@ -1,5 +1,6 @@
 // main: main.less
-body {
+
+body#bios-page {
   background-color: white;
   background-width: 20%;
   background-position: center 100px;
